JumpScript/tests/baselines/reference/thisInSuperCall.symbols
=== tests/cases/compiler/thisInSuperCall.jump ===
class Base { 
>Base : Symbol(Base, Decl(thisInSuperCall.jump, 0, 0))

    constructor(x: any) {}
>x : Symbol(x, Decl(thisInSuperCall.jump, 1, 16))
}

class Foo extends Base {
>Foo : Symbol(Foo, Decl(thisInSuperCall.jump, 2, 1))
>Base : Symbol(Base, Decl(thisInSuperCall.jump, 0, 0))

    constructor() {
        super(this); // error: "super" has to be called before "this" accessing
>super : Symbol(Base, Decl(thisInSuperCall.jump, 0, 0))
>this : Symbol(Foo, Decl(thisInSuperCall.jump, 2, 1))
    }
}

class Foo2 extends Base {
>Foo2 : Symbol(Foo2, Decl(thisInSuperCall.jump, 8, 1))
>Base : Symbol(Base, Decl(thisInSuperCall.jump, 0, 0))

    public p = 0;
>p : Symbol(Foo2.p, Decl(thisInSuperCall.jump, 10, 25))

    constructor() {
        super(this); // error
>super : Symbol(Base, Decl(thisInSuperCall.jump, 0, 0))
>this : Symbol(Foo2, Decl(thisInSuperCall.jump, 8, 1))
    }
}

class Foo3 extends Base {
>Foo3 : Symbol(Foo3, Decl(thisInSuperCall.jump, 15, 1))
>Base : Symbol(Base, Decl(thisInSuperCall.jump, 0, 0))

    constructor(public p) {
>p : Symbol(Foo3.p, Decl(thisInSuperCall.jump, 18, 16))

        super(this); // error
>super : Symbol(Base, Decl(thisInSuperCall.jump, 0, 0))
>this : Symbol(Foo3, Decl(thisInSuperCall.jump, 15, 1))
    }
}
